--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mycrypto\ufb02ix-mvp",
+  "name": "mycryptoﬂix-mvp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.9",
     "next": "13.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "viem": "^2.39.0",
+    "wagmi": "^2.19.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
